test_suite5/ALAN/test_suite/alan-2022-examples/failing/004920_mutation.alan
source Y begin leave X6 and, end
